--- a/README.rdoc
+++ b/README.rdoc
@@ -1,11 +1,10 @@
-delayed_job_admin
-=================
+= delayed_job_admin
 
 Adding some simple admin features to delayed_job.
 
 This project is a mountable rails engine to provide some useful admin tools to monitor your delayed jobs queue.
 
-Getting Started
+=== Getting Started
 
 Add the gem to your Gemfile
 `gem 'delayed_job_admin'`
@@ -25,10 +24,11 @@ Rails.application.routes.draw do
 end
 `
 
-== Getting started with development (i.e. running tests)
+=== Getting started with development (i.e. running tests)
 
   1. Clone the repo from GitHub git@github.com:ExamTime/ninja_access.git
   2. cd delayed_job_admin
   3. bundle install --binstubs
-  5. rake db:create && rake db:migrate && rake db:test:prepare
-  6. rake 
+  4. cd spec/dummy
+  5. bundle exec rake db:create && bundle exec rake db:migrate && bundle exec rake db:test:prepare
+  6. bundle exec rake
