Updating dummy app with changes to install templates.

--- a/spec/dummy/config/locales/delayed_job_admin.en.yml
+++ b/spec/dummy/config/locales/delayed_job_admin.en.yml
@@ -42,10 +42,12 @@ en:
         updated_at: Updated at
         archived_at: Archived at
         archive_note: Archive note
-    alert_strategies:
-      email_alert_strategy:
-        alert_email:
-          subject: "ALERT: Queue depth on '%{queue_name}' has exceeded the threshold of %{threshold}"
+    queue_threshold_alert_mailer:
+      send_alert:
+        subject: "ALERT: Queue depth on '%{queue_name}' has exceeded the threshold of %{threshold}"
+        intro: "You are receiving this email as your email has been added to the configured list of users to be notified when the delayed job queue depth exceeds the configured limits."
+        message: "WARNING:: The queue name '%{queue}' has a queue depth of %i{depth}, exceeding the configured threshold of %{threshold} jobs."
+        footer: "If you do not think you should be receiving this email please contact a dev team member, and ask them to reconfigure these alerts."
     destroy_job:
       success: "The delayed job has been successfully destroyed."
       failure: "There has been an error when destroying this delayed job."
